--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                       <td align="center" valign="top">
                         <!-- TOP IMAGE -->
                         <img
-                          src="image-1.png"
+                          src="https://i.postimg.cc/66PS6Gzx/image-1.png"
                           width="100%"
                           height="600"
                           style="
@@ -227,7 +227,7 @@
                                 style="font-size: 14px; padding: 10px"
                               >
                                 <img
-                                  src="image-2.png"
+                                  src="https://i.postimg.cc/gkffs66H/image-2.png"
                                   width="100%"
                                   style="
                                     margin: 0;
@@ -491,7 +491,7 @@
                       <td align="center" valign="top">
                         <a href="#" style="text-decoration: none">
                           <img
-                            src="image-3.png"
+                            src="https://i.postimg.cc/yNTt7QpL/image-3.png"
                             width="100%"
                             style="
                               margin: 0;
@@ -618,7 +618,7 @@
                       <td align="center" valign="top">
                         <a href="#" style="text-decoration: none"
                           ><img
-                            src="image-4.png"
+                            src="https://i.postimg.cc/50NGyBZb/image-4.png"
                             width="100%"
                             style="
                               margin: 0;
@@ -712,7 +712,7 @@
                     <tr>
                       <td align="center" valign="top">
                         <img
-                          src="image-5.png"
+                          src="https://i.postimg.cc/qqN5XkJF/image-5.jpg"
                           width="100%"
                           style="
                             margin: 0;
@@ -761,7 +761,7 @@
                     <tr>
                       <td align="center" valign="top">
                         <img
-                          src="image-6.png"
+                          src="https://i.postimg.cc/fL2P93NX/image-6.jpg"
                           width="100%"
                           style="
                             margin: 0;
@@ -823,7 +823,7 @@
                           style="text-decoration: none; color: #fff"
                         >
                           <img
-                            src="twitter.png"
+                            src="https://i.postimg.cc/Wzxf5Qt1/twitter.png"
                             alt=""
                             style="width: 20px; margin-right: 5px"
                           /> </a
@@ -833,7 +833,7 @@
                           style="text-decoration: none; color: #fff"
                         >
                           <img
-                            src="fb.png"
+                            src="https://i.postimg.cc/pX9wKByd/fb.png"
                             alt=""
                             style="width: 20px; margin-right: 5px"
                           /> </a
@@ -842,7 +842,11 @@
                           target="_blank"
                           style="text-decoration: none; color: #fff"
                         >
-                          <img src="ig.png" alt="" style="width: 20px" />
+                          <img
+                            src="https://i.postimg.cc/pLz36Xfb/ig.png"
+                            alt=""
+                            style="width: 20px"
+                          />
                         </a>
                       </td>
                     </tr>
@@ -856,7 +860,11 @@
                     </tr>
                     <tr>
                       <td align="center" valign="top">
-                        <img width="150" src="footer-logo.png" alt="" />
+                        <img
+                          width="150"
+                          src="https://i.postimg.cc/TPxBMM0y/footer-logo.png"
+                          alt=""
+                        />
                       </td>
                     </tr>
                   </table>
