--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                           style="text-decoration: none"
                         >
                           <img
-                            src="image-1.png"
+                            src="https://i.postimg.cc/66PS6Gzx/image-1.png"
                             width="100%"
                             style="
                               margin: 0;
@@ -246,7 +246,7 @@
                           style="text-decoration: none"
                         >
                           <img
-                            src="image-2.png"
+                            src="https://i.postimg.cc/gkffs66H/image-2.png"
                             width="100%"
                             style="
                               margin: 0;
@@ -678,7 +678,7 @@
                           target="_blank"
                           style="text-decoration: none"
                           ><img
-                            src="image-3.png"
+                            src="https://i.postimg.cc/yNTt7QpL/image-3.png"
                             width="100%"
                             style="
                               margin: 0;
@@ -834,7 +834,7 @@
                           target="_blank"
                           style="text-decoration: none"
                           ><img
-                            src="image-4.png"
+                            src="https://i.postimg.cc/50NGyBZb/image-4.png"
                             width="100%"
                             style="
                               margin: 0;
@@ -941,7 +941,7 @@
                           style="text-decoration: none"
                         >
                           <img
-                            src="image-5.png"
+                            src="https://i.postimg.cc/qqN5XkJF/image-5.jpg"
                             width="100%"
                             style="
                               margin: 0;
@@ -989,7 +989,7 @@
                           style="text-decoration: none"
                         >
                           <img
-                            src="image-6.png"
+                            src="https://i.postimg.cc/fL2P93NX/image-6.jpg"
                             width="100%"
                             style="
                               margin: 0;
@@ -1046,7 +1046,7 @@
                           target="_blank"
                           style="text-decoration: none"
                           ><img
-                            src="fb.png"
+                            src="https://i.postimg.cc/pX9wKByd/fb.png"
                             width="100%"
                             style="
                               margin: 0;
@@ -1064,7 +1064,7 @@
                           target="_blank"
                           style="text-decoration: none"
                           ><img
-                            src="twitter.png"
+                            src="https://i.postimg.cc/Wzxf5Qt1/twitter.png"
                             width="100%"
                             style="
                               margin: 0;
@@ -1082,7 +1082,7 @@
                           target="_blank"
                           style="text-decoration: none"
                           ><img
-                            src="ig.png"
+                            src="https://i.postimg.cc/pLz36Xfb/ig.png"
                             width="100%"
                             style="
                               margin: 0;
