--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@
                           target="_blank"
                           style="text-decoration: none"
                           ><img
-                            src="footer-logo.png"
+                            src="https://i.postimg.cc/TPxBMM0y/footer-logo.png"
                             width="100%"
                             style="
                               margin: 0;
