--- a/index.html
+++ b/index.html
@@ -103,11 +103,13 @@
           font-size: 20px !important;
         }
         .m-title {
-          font-size: 28px !important;
+          font-size: 23px !important;
           font-weight: 800 !important;
           letter-spacing: 2px !important;
         }
         .m-subtitle {
+          font-size: 11px !important;
+          font-weight: 600 !important;
         }
         .m-main-btn {
           width: 180px !important;
@@ -656,7 +658,7 @@
                         >
                           BITCOIN DICE
                         </h2>
-                        <p style="font-size: 13px">
+                        <p style="font-size: 13px" class="m-subtitle">
                           Triple Your Rewards: Get 3X Bonus Points With Every
                           Roll & Wager.
                         </p>
